@@ -117,12 +117,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) core: avoid adding multiple subrequest filters when there are nested 
-     subrequests.  PR58292
-     trunk patch: http://svn.apache.org/r1698239
-     2.4.x patch: trunk works
-     +1: covener, ylavic, jim
-
   *) mod_remoteip: Pick up where we left off during a subrequest rather
      than running with the modified XFF but original TCP address. PR49839/PR60251
      trunk patch: http://svn.apache.org/r1688399  
