@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.24
 
+  *) core: avoid adding multiple subrequest filters when there are nested
+     subrequests.  PR58292
+
   *) mod_http2: connection shutdown revisited: corrected edge cases on
      shutting down ongoing streams, changed log warnings to be less noisy
      when waiting on long running tasks. [Stefan Eissing]
